--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ So why not get paid for something that is minimum effort and doesn’t interrupt
             <p class="lead">If you get 10 signups we’ll pay you £10! You will also get an extra £1 for every extra signup. (So 23 signups would get you £23!)</p>
           
             <p class="lead">You can also refer people to become ambassadors. If they go on to get 5 signups, you’ll receive a bonus £5. You can even track the amount of signups your referrals get. Simply send me the email of anyone interested and I’ll send them more information. </p>
-            <p class="lead">70% of ambassadors reached their goal with one facebook post.</p>
+            <p class="lead">Most of our ambassadors get £15-25 from a single facebook post, but many go on to earn much more by thinking outside the box.</p>
             <p class="lead">Payouts will be every other Friday and will be done by bank transfer or Paypal.</p>
             
 
